force-app/main/default/objects/Opportunity_Clone_Failure__c/Opportunity_Clone_Failure__c.object-meta.xml
<CustomObject>
    <description>This object maintain all the Clone errors for the Opportunity. This is populated by the Batch class &apos;AutoCreateOppFutureQuarterSchEntry_Batch.cls&apos; and &apos;AutoCreateOppFutureQuarterSchEntrys.cls&apos;</description>
    <label>Opportunity Clone Failure</label>
    <nameField>
        <displayFormat>OCF-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Clone Failures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>