force-app/main/default/objects/Opportunity_Clone_Failure__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>This field is to store the Opportunity Clone DML failure error message</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>