force-app/main/default/objects/Opportunity_Clone_Failure__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field store the Opportunity Id of the of the Clone failure record.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Clone Failures</relationshipLabel>
    <relationshipName>Opportunity_Clone_Failures</relationshipName>
    <type>Lookup</type>
</CustomField>