force-app/main/default/objects/Opportunity_Clone_Failure__c/fields/Opportunity_CloseDate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_CloseDate__c</fullName>
    <label>Opportunity CloseDate</label>
    <type>Date</type>
</CustomField>